# lmpy

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CITATION.cff  Dockerfile  MANIFEST.in  README.md  dev-requirements.txt  environment.yml  genindex.html  index.html  objects.inv  project-overview.md  pull_request_template.md  py-modindex.html  pyproject.toml  requirements-docs.txt  requirements-test.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  versioneer.py
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/pages/: about.doctree  installation.doctree  quckstart.doctree  references.doctree
.doctrees/source/: build_grid.doctree  data_preparation.doctree  layer_encoder.doctree  lmpy.data_preparation.doctree  lmpy.data_wrangling.doctree  lmpy.data_wrangling.occurrence.doctree  lmpy.doctree  lmpy.randomize.doctree  lmpy.spatial.doctree  lmpy.statistics.doctree  modules.doctree  occurrence_filters.doctree  occurrence_transformation.doctree
.doctrees/tutorial/: build_grid.doctree  data_cleaning.doctree  layer_encoder.doctree  matrix.doctree  mcpa.doctree  occurrence_filters.doctree  occurrence_transformation.doctree  pam_randomization.doctree  pam_statistics.doctree  running_stats.doctree  tree.doctree  tutorial.doctree
.github/: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/linters/: .bandit  .flake8  .isort.cfg  .markdownlint  .python-lint
.github/workflows/: build_sphinx_docs.yml  build_user_manual_pdf.yml  check_citation.yml  docker.yml  mac-pytest.yml  mac_pytest.yml  main.yml  pre-commit.yml  pre-release.yml  publish_to_pypi.yml  pytest-conda.yml  pytest-installed.yml  pytest.yml  test_sphinx_docs.yml  update_citation.yml  win_pytest.yml
_modules/: accepted_name_wrangler.html  index.html
_modules/lmpy/: _version.html  log.html  matrix.html  point.html  species_list.html  tree.html
_sources/autoapi/: index.rst.txt
_sources/pages/: about.rst.txt  glossary.rst.txt  quckstart.rst.txt
_sources/scripts/: build_shapegrid.rst.txt  convert_csv_to_lmm.rst.txt  create_scatter_plot.rst.txt  create_stat_heatmap.rst.txt  create_tree_matrix.rst.txt  tools.rst.txt  wrangle_occurrences.rst.txt  wrangle_tree.rst.txt
_sources/source/: lmpy.rst.txt  modules.rst.txt
_sources/tutorial/: data_cleaning.rst.txt  layer_encoder.rst.txt  matrix.rst.txt  mcpa.rst.txt  occurrence_filters.rst.txt  occurrence_transformation.rst.txt  pam_randomization.rst.txt  pam_statistics.rst.txt  tree.rst.txt  tutorial.rst.txt
_sphinx_config/: conf.py  index.rst  make.bat
_sphinx_config/pages/: about.rst  glossary.rst  installation.rst  references.rst
_sphinx_config/scripts/: aggregate_matrices.rst  build_grid.rst  build_shapegrid.rst  calculate_p_values.rst  calculate_pam_stats.rst  convert_lmm_to_csv.rst  convert_lmm_to_geojson.rst  create_point_heatmap.rst  create_rare_species_model.rst  create_scatter_plot.rst  create_stat_heatmap.rst  encode_layers.rst  encode_tree_mcpa.rst  (+7 more)
_static/: documentation_options.js
autoapi/: index.html
docs/: index.html
lmpy/: README.md  __init__.py  _version.py  grady.py  log.py  matrix.py  point.py  species_list.py  swap.py  tree.py
pages/: about.html  glossary.html  installation.html  quckstart.html  references.html
randomize/: splotch.py  swap.py
scripts/: aggregate_matrices.html  build_grid.html  build_shapegrid.html  calculate_p_values.html  calculate_pam_stats.html  clean_occurrences.html  convert_csv_to_lmm.html  convert_lmm_to_csv.html  convert_lmm_to_geojson.html  create_point_heatmap.html  create_rare_species_model.html  create_scatter_plot.html  create_stat_heatmap.html  create_tree_matrix.html  encode_layers.html  encode_tree_mcpa.html  mcpa_run.html  randomize_pam.html  split_occurrence_data.html  tools.html  wrangle_matrix.html  wrangle_occurrences.html  wrangle_species_list.html  wrangle_tree.html
source/: build_grid.html  data_preparation.html  layer_encoder.html  lmpy.data_preparation.html  lmpy.data_wrangling.html  lmpy.data_wrangling.occurrence.html  lmpy.html  lmpy.randomize.html  lmpy.spatial.html  lmpy.statistics.html  modules.html  occurrence_filters.html  occurrence_transformation.html
tests/: README.md  __init__.py  conftest.py  data_simulator.py  data_validator.py  test_matrix.py  test_perturbation.py  test_point.py  test_species_list.py  test_speed.py  test_tree.py
tools/: clean_occurrences.py  convert_csv_to_lmm.py  convert_lmpy_to_csv.py  encode_layers.py  encode_tree.py  process_idigbio.py  randomize_pam.py
tutorial/: aggregate_occurrence_data.html  build_grid.html  data_cleaning.html  layer_encoder.html  matrix.html  matrix_data_wrangling.html  mcpa.html  occurrence_filters.html  occurrence_transformation.html  pam_randomization.html  pam_statistics.html  running_stats.html  tree.html  tutorial.html
(+748 files in other folders)
