[metadata]
name = specify-lmpy
author = Specify Systems Lifemapper Team
author_email = cjgrady@ku.edu
description = Package of commonly used and shared Lifemapper objects and tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/specifysystems/lmpy
project_urls =
    Bug Tracker = https://github.com/specifysystems/lmpy/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Documentation :: Sphinx
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where = lmpy

[options.entry_points]
console_scripts =
    convert_csv_to_lmm = tools.convert_csv_to_lmm:cli
    convert_lmpy_to_csv = tools.convert_lmpy_to_csv:cli
    # encode_layers = tools.encode_layers:cli
    randomize_pam = tools.randomize_pam:cli

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = lmpy/_version.py
versionfile_build = lmpy/_version.py
tag_prefix = ''
