[metadata]
name = specify-lmpy
author = Specify Systems Lifemapper Team
author_email = cjgrady@ku.edu
description = Package of commonly used and shared Lifemapper objects and tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/specifysystems/lmpy
project_urls =
    Bug Tracker = https://github.com/specifysystems/lmpy/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Documentation :: Sphinx
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where = lmpy

[options.entry_points]
console_scripts =
    build_shapegrid = lmpy.tools.build_shapegrid:cli
    clean_occurrences = lmpy.tools.clean_occurrences:cli
    convert_csv_to_lmm = lmpy.tools.convert_csv_to_lmm:cli
    convert_lmpy_to_csv = lmpy.tools.convert_lmpy_to_csv:cli
    create_point_heat_map = lmpy.tools.create_point_heat_map:cli
    create_rare_species_model = lmpy.tools.create_rare_species_model:cli
    create_tree_matrix = lmpy.tools.create_tree_matrix:cli
    encode_layers = lmpy.tools.encode_layers:cli
    randomize_pam = lmpy.tools.randomize_pam:cli
    split_occurrence_data = lmpy.tools.split_occurrence_data:cli
    wrangle_matrix = lmpy.tools.wrangle_matrix:cli
    wrangle_tree = lmpy.tools.wrangle_tree:cli

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = lmpy/_version.py
versionfile_build = lmpy/_version.py
tag_prefix = ''
